Updated routes and responses
