# server/routes/user.js
@@ -14,14 +14,14 @@ const Register = require('./user/Register');
 const RequestReset = require('./user/RequestReset');
 const ResetPassword = require('./user/ResetPassword');
 
+router.post('/', Register);
+router.patch('/', tokenAuth, Edit);
 router.get('/questions', tokenAuth, Questions);
 router.get('/answers', tokenAuth, Answers);
-router.post('/register', Register);
 router.post('/login', basicAuth, Login);
 router.delete('/logout', tokenAuth, Logout);
 router.get('/reset', RequestReset);
 router.post('/reset/:id', ResetPassword);
 router.get('/:username', GetUser);
-router.patch('/', tokenAuth, Edit);
 
 module.exports = router;
